# megaglest-source

./: CMakeLists.txt
source/: CMakeLists.txt
source/glest_game/: CMakeLists.txt
source/glest_game/facilities/: components.cpp  components.h
source/glest_game/game/: game.cpp
source/glest_game/graphics/: renderer.cpp  renderer.h
source/glest_game/gui/: gui.cpp  selection.cpp
source/glest_game/menu/: menu_state_connected_game.cpp  menu_state_custom_game.cpp
source/glest_game/world/: map.cpp  map.h  map_waterwaves.cpp.rett  tileset.cpp  tileset.h  water_effects.h  world.cpp  world.h
source/shared_lib/: CMakeLists.txt
source/shared_lib/include/graphics/gl/: opengl.h
source/shared_lib/sources/platform/posix/: miniftpclient.cpp
source/shared_lib/sources/platform/sdl/: window.cpp
